Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61913

Shapes: Fallback to Geometry backend when function resolving fails

    XMLWordPrintable

Details

    Description

      To fill shapes with gradients glProgramPathFragmentInputGenNV is used, which is not present on my system, meaning function resolving fails and nothing is drawn at all (neither shapes with gradients nor shapes without gradients).

      Because QQuickNvprFunctions::isSupported() returns true (as the GL_NV_path_rendering extension is present), the renderer does not fallback to the geometry backend.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bkre Berthold Krevert
            bkre Berthold Krevert
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes