Check for GL_NV_path_rendering extension

If resolving of glProgramPathFragmentInput fails, the nvpr renderer
should not report that it is supported, so that the shape item can
fallback to the geometry renderer.

Task-number: QTBUG-61913
Change-Id: I0795b1dedc330432884d5214ee2492c757055a54
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>